--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
 
 <body>
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore.
-Then he climbed to the tower of the church,
-Up the wooden stairs, with ... You know the rest.
+<p>Marching down to their boats on the shore
+He climbed to the tower of the church
+Up the wooden stairs, 
+with ... 
+You know the rest.<p>
 
+<p>
+There are things you can replace, 
+and others you cannot.
+The time ... 
+Now my only trouble, 
+the rest 
+I forgot ...<p>
 
-There are things you can replace, and others you cannot.
-The time ... Now my only trouble, the rest I forgot ...
-Dressed myself in green, I went down unto the sea.
+<p>Dressed myself in green, 
+I went down unto the sea.
+there are other eyes watching her coming 
+and other voices ready to take up ...
+We will rest up<p>
 
-
-there are other eyes watching her coming and other voices ready to take up ...
-We will rest up
-
-"It should have come down" or "It should have came down ...
+<p>"It should have come down" 
+or 
+"It should have came down ...
 coming after them is left to carry the rest
 </p>
 </body>
