--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 He climbed to the tower of the church
 Up the wooden stairs, 
 with ... 
-You know the rest.<p>
+You know the rest.</p>
 
 <p>
 There are things you can replace, 
@@ -16,13 +16,13 @@ and others you cannot.
 The time ... 
 Now my only trouble, 
 the rest 
-I forgot ...<p>
+I forgot ...</p>
 
 <p>Dressed myself in green, 
 I went down unto the sea.
 there are other eyes watching her coming 
 and other voices ready to take up ...
-We will rest up<p>
+We will rest up</p>
 
 <p>"It should have come down" 
 or 
