--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 
 <body>
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore
-He climbed to the tower of the church
-Up the wooden stairs, 
-with ... 
+<p>Marching down to their boats on the shore< /br>
+He climbed to the tower of the church< /br>
+Up the wooden stairs,< /br>
+with ...< /br>
 You know the rest.</p>
 
 <p>
-There are things you can replace, 
-and others you cannot.
-The time ... 
-Now my only trouble, 
-the rest 
+There are things you can replace,< /br> 
+and others you cannot.< /br>
+The time ...< /br> 
+Now my only trouble,< /br> 
+the rest< /br> 
 I forgot ...</p>
 
-<p>Dressed myself in green, 
-I went down unto the sea.
-there are other eyes watching her coming 
-and other voices ready to take up ...
+<p>Dressed myself in green,< /br> 
+I went down unto the sea.< /br>
+there are other eyes watching her coming< /br> 
+and other voices ready to take up ...< /br>
 We will rest up</p>
 
-<p>"It should have come down" 
-or 
-"It should have came down ...
+<p>"It should have come down"< /br> 
+or< /br> 
+"It should have came down ...< /br>
 coming after them is left to carry the rest
 </p>
 </body>
