--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 </head>
 
 <body>
+ <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore< /br>
-He climbed to the tower of the church< /br>
-Up the wooden stairs,< /br>
-with ...< /br>
+<p>Marching down to their boats on the shore<br>
+He climbed to the tower of the church<br>
+Up the wooden stairs,<br>
+with ...<br>
 You know the rest.</p>
 
 <p>
-There are things you can replace,< /br> 
-and others you cannot.< /br>
+There are things you can replace,<br> 
+and others you cannot.<br>
 The time ...< /br> 
-Now my only trouble,< /br> 
-the rest< /br> 
+Now my only trouble,<br> 
+the rest<br> 
 I forgot ...</p>
 
-<p>Dressed myself in green,< /br> 
-I went down unto the sea.< /br>
-there are other eyes watching her coming< /br> 
-and other voices ready to take up ...< /br>
+<p>Dressed myself in green,<br> 
+I went down unto the sea.<br>
+there are other eyes watching her coming<br> 
+and other voices ready to take up ...<br>
 We will rest up</p>
 
-<p>"It should have come down"< /br> 
-or< /br> 
-"It should have came down ...< /br>
+<p>"It should have come down"<br> 
+or<br> 
+"It should have came down ...<br>
 coming after them is left to carry the rest
 </p>
 </body>
