--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
 <p>Marching down to their boats on the shore<br>
-He climbed to the tower of the church<br>
+He climbed to the tower of the church <img src="img/bird.jpg" ><br>
 Up the wooden stairs,<br>
 with ...<br>
 You know the rest.</p>
@@ -14,7 +14,7 @@ You know the rest.</p>
 <p>
 There are things you can replace,<br> 
 and others you cannot.<br>
-The time ...< /br> 
+The time ...<br> 
 Now my only trouble,<br> 
 the rest<br> 
 I forgot ...</p>
