--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
 <p>Marching down to their boats on the shore<br>
-He climbed to the tower of the church <img src="img/bird.jpg" ><br>
+He climbed to the tower of the church <img src="img/bird.jpg" ALIGN=”right” /> <br>
 Up the wooden stairs,<br>
 with ...<br>
 You know the rest.</p>
