--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore<br>
-He climbed to the tower of the church<BR CLEAR=”left” /> <img src="img/bird.jpg" ALIGN=”left” />
+<p>Marching down to their boats on the shore <img src="img/bird.jpg" ALIGN=”right” /> <br>
+He climbed to the tower of the church<br> 
 Up the wooden stairs,<br>
 with ...<br>
 You know the rest.</p>
