--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <body>
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore <img src="img/bird.jpg" style="float:right"> <br>
+<p>Marching down to their boats on the shore<br>
 He climbed to the tower of the church<br> 
-Up the wooden stairs,<br>
+Up the wooden stairs,<br> <img src="img/bird.jpg" style="float:right"> 
 with ...<br>
 You know the rest.</p>
 
