--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ You know the rest.</p>
 There are things you can replace,<br> 
 and others you cannot.<br>
 The time ...<br> 
-Now my only trouble,<br> 
+Now my only trouble,<br> <img src="img/sleep.jpg" style="float:right"> 
 the rest<br> 
 I forgot ...</p>
 
 <p>Dressed myself in green,<br> 
 I went down unto the sea.<br>
 there are other eyes watching her coming<br> 
-and other voices ready to take up ...<br>
+and other voices ready to take up ...<br> <img src="img/tree.jpg" style="float:right"> 
 We will rest up</p>
 
 <p>"It should have come down"<br> 
