--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 <body>
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore<br>
+<p>Marching down to their boats on the shore <img src="img/bird.jpg" style="float:right">  <br>
 He climbed to the tower of the church<br> 
-Up the wooden stairs,<br> <img src="img/bird.jpg" style="float:right"> 
+Up the wooden stairs,<br> 
 with ...<br>
 You know the rest.</p>
 
 <p>
-There are things you can replace,<br> 
+There are things you can replace,<img src="img/sleep.jpg" style="float:right"> <br> 
 and others you cannot.<br>
 The time ...<br> 
-Now my only trouble,<br> <img src="img/sleep.jpg" style="float:right"> 
+Now my only trouble,<br>  
 the rest<br> 
 I forgot ...</p>
 
-<p>Dressed myself in green,<br> 
+<p>Dressed myself in green,<img src="img/tree.jpg" style="float:right"> <br> 
 I went down unto the sea.<br>
 there are other eyes watching her coming<br> 
-and other voices ready to take up ...<br> <img src="img/tree.jpg" style="float:right"> 
+and other voices ready to take up ...<br>  
 We will rest up</p>
 
 <p>"It should have come down"<br> 
