--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <body>
  <img src="img/fall.jpg" > 
 <h1>The Rest Came Down From Here</h1>
-<p>Marching down to their boats on the shore <img src="img/bird.jpg" style="float:right">  <br>
+<p>Marching down to their boats on the shore <br>
 He climbed to the tower of the church<br> 
 Up the wooden stairs,<br> 
 with ...<br>
 You know the rest.</p>
 
+ <p> <img src="img/bird.jpg" style="float:right"> </p>
+ 
 <p>
 There are things you can replace,<img src="img/sleep.jpg" style="float:right"> <br> 
 and others you cannot.<br>
