--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@ Up the wooden stairs,<br>
 with ...<br>
 You know the rest.</p>
 
- <p> <img src="img/bird.jpg" style="float:right"> </p>
+<p> <img src="img/bird.jpg" style="float:right"> </p>
  
 <p>
-There are things you can replace,<img src="img/sleep.jpg" style="float:right"> <br> 
+There are things you can replace,<br> 
 and others you cannot.<br>
 The time ...<br> 
 Now my only trouble,<br>  
 the rest<br> 
 I forgot ...</p>
 
-<p>Dressed myself in green,<img src="img/tree.jpg" style="float:right"> <br> 
+<p> <img src="img/sleep.jpg" style="float:right"> </p>
+ 
+<p>Dressed myself in green,<br> 
 I went down unto the sea.<br>
 there are other eyes watching her coming<br> 
 and other voices ready to take up ...<br>  
 We will rest up</p>
 
+ <p> <img src="img/tree.jpg" style="float:right"> </p>
+ 
 <p>"It should have come down"<br> 
 or<br> 
 "It should have came down ...<br>
